# AI-Support-Agent

./: README.md
backend/: pyproject.toml  requirements.txt  vercel.json
backend/api/: main.py
frontend/: tailwind.config.js
frontend/app/: layout.tsx  page.tsx
